--- a/style2.css
+++ b/style2.css
@@ -214,7 +214,7 @@ section .title::after {
 .home {
   position: relative;
   display: flex;
-  background: url("Me1.jpg" idth="630px" height="630px") no-repeat center;
+  background: url("Me.jpg") no-repeat center;
   height: 100vh;
   color: #fff;
   min-height: 500px;
